--- a/CommunityMarket/app/src/main/res/values-en/strings.xml
+++ b/CommunityMarket/app/src/main/res/values-en/strings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <string name="app_name">Open MArket</string>
     <string name="title_activity_accueil">O Market</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
@@ -10,8 +10,6 @@
     <string name="action_settings">Settings</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="facebook_app_id">425428758001662</string>
-    <string name="fb_login_protocol_scheme">fb425428758001662</string>
-
     <!--  <string name="fb_login_protocol_scheme">fb425428758001662</string> -->
      <string name="title_activity_scrolling_one">ScrollingActivityOne</string>
      <string name="slider_description">image de fond pour le slider d\'accueil</string>
@@ -127,4 +125,5 @@
         <item>Buéa</item>
         <item>Maroua</item>
     </string-array>
+
  </resources>
