correction des erreurs

--- a/CommunityMarket/app/src/main/res/values-fr/strings.xml
+++ b/CommunityMarket/app/src/main/res/values-fr/strings.xml
@@ -109,7 +109,8 @@
     <string name="publicite_drawer">publicite</string>
     <string name="pas_de_message">aucune conversation</string>
     <string name="client_id">537391119843-njqfai8ka55g6doo947bnklqcap3ih8c.apps.googleusercontent.com</string>
-
+    <string name="com.twitter.sdk.android.CONSUMER_KEY" >VrPx1FzdX0e0MZ4ZQJP9cu1qa</string>
+    <string name="com.twitter.sdk.android.CONSUMER_SECRET" >J2b5B2IgQRHTQOEd6p0E2Kwb5IjhDzBDaSAgO4LAakc8TFGcuf</string>
     <string-array id="@+id/countries"
         name="countries">
         <item>Residence</item>
