corrections des erreurs

--- a/CommunityMarket/app/src/main/res/values-fr/strings.xml
+++ b/CommunityMarket/app/src/main/res/values-fr/strings.xml
@@ -23,7 +23,7 @@
     <string name="slider_description_slider2">L\'application dispose d\'enplacement cible pour vous pemettre de vous mettre en valeur et de faire connaitre vos articles.</string>
     <string name="titre_slider3">contacter,negocier avec d\'autres et faites de bonne affaire .</string>
     <string name="description_slider3">Inscrivez vous et decouvrer des d\'articles de qualités vendu par d\'autres utilisateur de la plateforme , negocier directement avec eux  et faite de bonne affaire sans payer de frais.</string>
-    <string name="apropos_grand_titre">Besoin de mettre vos produits en avant sur votre application prefere ?</string>
+    <string name="apropos_grand_titre">Besoin de mettre votre boutique en avant sur votre application prefere a petit prix ?</string>
     <string name="a_propos_sous_titre">Contacter nous via appel ou whatsapp . Cliquez ici bas.</string>
     <string name="a_propos_button">contacter nous.</string>
     <string name="string_choice_email">se connecter via email</string>
