--- a/CommunityMarket/app/src/main/res/values-en/strings.xml
+++ b/CommunityMarket/app/src/main/res/values-en/strings.xml
@@ -23,7 +23,7 @@
      <string name="slider_description_slider2">The application has target placement to allow you to highlight and make known your articles.</string>
      <string name="titre_slider3">contact, negotiate with others and make good business.</string>
      <string name="description_slider3">Register and discover items of quality sold by other users of the platform, negotiate directly with them and made good business without paying fees.</string>
-     <string name="apropos_grand_titre">Need to put your products on your favorite application?</string>
+     <string name="apropos_grand_titre">Need to put your products on your favorite application to small price ?</string>
      <string name="a_propos_sous_titre">Contact us via call or whatsapp. Click here below.</string>
      <string name="a_propos_button">contact us.</string>
      <string name="string_choice_email">connect via email</string>
