--- a/CommunityMarket/app/src/main/res/values-en/strings.xml
+++ b/CommunityMarket/app/src/main/res/values-en/strings.xml
@@ -17,7 +17,7 @@
      <string name="title_activity_maps">Map</string>
      <string name="string">Map</string>
      <string name="title_activity_scrolling_detail_one">ScrollingActivityDetailOne</string>
-     <string name="description_titre_slider1">with Open Market, sell for free and easily your products everywhere in Cameroon.</string>
+     <string name="description_titre_slider1">with Open Market, sell for free and easily your products everywhere in africa.</string>
      <string name="titre_slider1">Sell ​​your clothes without stress.</string>
      <string name="titre_slider2">Make your shop known.</string>
      <string name="slider_description_slider2">The application has target placement to allow you to highlight and make known your articles.</string>
