--- a/CommunityMarket/app/src/main/res/values-fr/strings.xml
+++ b/CommunityMarket/app/src/main/res/values-fr/strings.xml
@@ -46,7 +46,7 @@
     <string name="produc_name">nom du produit (35 caractere max)</string>
     <string name="post_description">description (400 caractere max)</string>
     <string name="post_prix">prix ( la valeur est le fcfa )</string>
-    <string name="post_info_sur_vente">info sur votre vente</string>
+    <string name="post_info_sur_vente">Annonce</string>
     <string name="profil_voir_article">voir vos articles</string>
     <string name="profil_reside">reside a</string>
     <string name="register_login">votre email</string>
