envoi des correction

--- a/CommunityMarket/app/src/main/res/values-en/strings.xml
+++ b/CommunityMarket/app/src/main/res/values-en/strings.xml
@@ -24,7 +24,7 @@
      <string name="titre_slider3">contact, negotiate with others and make good business.</string>
      <string name="description_slider3">Register and discover items of quality sold by other users of the platform, negotiate directly with them and made good business without paying fees.</string>
      <string name="apropos_grand_titre">Need to put your products on your favorite application to small price ?</string>
-     <string name="a_propos_sous_titre">Contact us via call or whatsapp. Click here below.</string>
+     <string name="a_propos_sous_titre">Contact us . Click here below.</string>
      <string name="a_propos_button">contact us.</string>
      <string name="string_choice_email">connect via email</string>
      <string name="choice_enregistrer">register</string>
