--- a/CommunityMarket/app/src/main/res/values-fr/strings.xml
+++ b/CommunityMarket/app/src/main/res/values-fr/strings.xml
@@ -17,12 +17,12 @@
     <string name="title_activity_maps">Map</string>Vendez vos vetements sans stress .
     <string name="string">Map</string>
     <string name="title_activity_scrolling_detail_one">ScrollingActivityDetailOne</string>
-    <string name="description_titre_slider1">Grace a Open Market , vendez gratuitement et facilement vos produits partout en afrique.</string>
+    <string name="description_titre_slider1">Grace a Open Market , vendez gratuitement et facilement vos produits partout au cameroun.</string>
     <string name="titre_slider1">Vendez vos vetements sans stress .</string>
     <string name="titre_slider2">Faites connaitre votre boutique .</string>
-    <string name="slider_description_slider2">L\'application dispose d\'enplacement cible pour vous pemettre de vous mettre en valeur et de faire connaitre vos articles.</string>
-    <string name="titre_slider3">contacter,negocier avec d\'autres et faites de bonne affaire .</string>
-    <string name="description_slider3">Inscrivez vous et decouvrer des d\'articles de qualités vendu par d\'autres utilisateur de la plateforme , negocier directement avec eux  et faite de bonne affaire sans payer de frais.</string>
+    <string name="slider_description_slider2">L\'application dispose d\'enplacements cible pour vous pemettre de vous mettre en valeur et de faire connaitre vos articles.</string>
+    <string name="titre_slider3">contacter,negocier et faites de bonne affaire .</string>
+    <string name="description_slider3">Inscrivez vous et decouvrer des articles de qualités vendu par d\'autres utilisateur de la plateforme , negocier directement avec eux  et faites de bonne affaire sans payer de frais.</string>
     <string name="apropos_grand_titre">Besoin de mettre votre boutique en avant sur votre application prefere a petit prix ?</string>
     <string name="a_propos_sous_titre">Contacter nous. Cliquez ici bas.</string>
     <string name="a_propos_button">contacter nous.</string>
