--- a/CommunityMarket/app/src/main/res/values-en/strings.xml
+++ b/CommunityMarket/app/src/main/res/values-en/strings.xml
@@ -17,7 +17,7 @@
      <string name="title_activity_maps">Map</string>
      <string name="string">Map</string>
      <string name="title_activity_scrolling_detail_one">ScrollingActivityDetailOne</string>
-     <string name="description_titre_slider1">with Open Market, sell for free and easily your products everywhere in africa.</string>
+     <string name="description_titre_slider1">with Open Market, sell for free and easily your clothing everywhere in africa.</string>
      <string name="titre_slider1">Sell ​​your clothes without stress.</string>
      <string name="titre_slider2">Make your shop known.</string>
      <string name="slider_description_slider2">The application has target placement to allow you to highlight and make known your articles.</string>
@@ -109,7 +109,7 @@
      <string name="message_drawer">posts</string>
      <string name="parametre_draw">parameter</string>
      <string name="publicite_drawer">publicity</string>
-    <string name="pas_de_message">aucune conversation</string>
+    <string name="pas_de_message">emp</string>
     <string name="client_id">537391119843-njqfai8ka55g6doo947bnklqcap3ih8c.apps.googleusercontent.com</string>
     <string name="com.twitter.sdk.android.CONSUMER_KEY" tools:ignore="ExtraTranslation">VrPx1FzdX0e0MZ4ZQJP9cu1qa</string>
     <string name="com.twitter.sdk.android.CONSUMER_SECRET" tools:ignore="ExtraTranslation">J2b5B2IgQRHTQOEd6p0E2Kwb5IjhDzBDaSAgO4LAakc8TFGcuf</string>
@@ -126,5 +126,16 @@
         <item>Buéa</item>
         <item>Maroua</item>
     </string-array>
+    <string name="choice_intro_text">Open market is your new business partner, sell everywhere in Cameroon at no cost. Register now, it\'s quick and easy.</string>
+    <string name="choice_rejoind_nous">Join us now .</string>
+    <string name="search_activity_que_voulez_vous">what do you want to search ?</string>
+    <string name="favories_text">Favorits</string>
+    <string name="prarametre_dite_en_plus_text">Said more about you ...</string>
+    <string name="parametre_text">Setting</string>
+    <string name="sell_empty_text">empty</string>
+    <string name="user_general_voir_vente">see sales</string>
 
- </resources>
+
+
+
+</resources>
