--- a/CommunityMarket/app/src/main/res/values-fr/strings.xml
+++ b/CommunityMarket/app/src/main/res/values-fr/strings.xml
@@ -17,12 +17,12 @@
     <string name="title_activity_maps">Map</string>Vendez vos vetements sans stress .
     <string name="string">Map</string>
     <string name="title_activity_scrolling_detail_one">ScrollingActivityDetailOne</string>
-    <string name="description_titre_slider1">Grace a Open Market , vendez gratuitement et facilement vos produits partout au cameroun.</string>
+    <string name="description_titre_slider1">Grace à Open Market , vendez gratuitement et facilement vos vetements partout au cameroun.</string>
     <string name="titre_slider1">Vendez vos vetements sans stress .</string>
-    <string name="titre_slider2">Faites connaitre votre boutique .</string>
-    <string name="slider_description_slider2">L\'application dispose d\'enplacements cible pour vous pemettre de vous mettre en valeur et de faire connaitre vos articles.</string>
-    <string name="titre_slider3">contacter,negocier et faites de bonne affaire .</string>
-    <string name="description_slider3">Inscrivez vous et decouvrer des articles de qualités vendu par d\'autres utilisateur de la plateforme , negocier directement avec eux  et faites de bonne affaire sans payer de frais.</string>
+    <string name="titre_slider2">Fait connaitre ta boutique .</string>
+    <string name="slider_description_slider2">L\'application dispose d\'enplacements cibles pour vous pemettre de vous mettre en valeur et de vous faire connaitre.</string>
+    <string name="titre_slider3">contactez,negociez et faites de bonnes affaire .</string>
+    <string name="description_slider3">Inscrivez vous et decouvrez des articles de qualités vendu par d\'autres utilisateur de la d\'open Market , negociez directement avec eux  et faites de bonnes affaire sans payer de frais.</string>
     <string name="apropos_grand_titre">Besoin de mettre votre boutique en avant sur votre application prefere a petit prix ?</string>
     <string name="a_propos_sous_titre">Contacter nous. Cliquez ici bas.</string>
     <string name="a_propos_button">contacter nous.</string>
@@ -111,6 +111,16 @@
     <string name="client_id">537391119843-njqfai8ka55g6doo947bnklqcap3ih8c.apps.googleusercontent.com</string>
     <string name="com.twitter.sdk.android.CONSUMER_KEY" tools:ignore="ExtraTranslation">VrPx1FzdX0e0MZ4ZQJP9cu1qa</string>
     <string name="com.twitter.sdk.android.CONSUMER_SECRET" tools:ignore="ExtraTranslation">J2b5B2IgQRHTQOEd6p0E2Kwb5IjhDzBDaSAgO4LAakc8TFGcuf</string>
+    <string name="choice_intro_text">Open market est votre nouveau partenaire en affaires , vendez partout au cameroun,sans frais.Inscrivez vous ,c\'est simple et rapide.</string>
+    <string name="choice_rejoind_nous"> Rejoignez-nous maintenant.</string>
+    <string name="search_activity_que_voulez_vous">Que veux-tu chercher?</string>
+    <string name="favories_text">favories</string>
+    <string name="prarametre_dite_en_plus_text">Dit en plus sur toi ...</string>
+    <string name="parametre_text">Parametre</string>
+    <string name="sell_empty_text">vide</string>
+    <string name="user_general_voir_vente">voir ventes</string>
+
+
     <string-array id="@+id/countries"
         name="countries">
         <item>ou residez vous ?</item>
