--- a/CommunityMarket/app/src/main/res/values-en/strings.xml
+++ b/CommunityMarket/app/src/main/res/values-en/strings.xml
@@ -134,6 +134,7 @@
     <string name="parametre_text">Setting</string>
     <string name="sell_empty_text">empty</string>
     <string name="user_general_voir_vente">see sales</string>
+    <string name="cuustum_text">edit your account data to post an article.</string>
 
 
 
