--- a/CommunityMarket/app/src/main/res/values-en/strings.xml
+++ b/CommunityMarket/app/src/main/res/values-en/strings.xml
@@ -135,6 +135,7 @@
     <string name="sell_empty_text">empty</string>
     <string name="user_general_voir_vente">see sales</string>
     <string name="cuustum_text">edit your account data to post an article.</string>
+    <string name="new_version_text">new version of open market available</string>
 
 
 
