--- a/CommunityMarket/app/src/main/res/values/strings.xml
+++ b/CommunityMarket/app/src/main/res/values/strings.xml
@@ -118,6 +118,7 @@
     <string name="sell_empty_text">empty</string>
     <string name="user_general_voir_vente">voir ses ventes</string>
     <string name="cuustum_text">modifier les donnees de votre compte pour poster un article .</string>
+    <string name="new_version_text">une nouvelle version d\'Open Market est disponible , telechargez la .</string>
     <string-array name="countries" id="@+id/countries">
         <item>ou residez vous ?</item>
         <item>Douala</item>
