--- a/CommunityMarket/app/src/main/res/values/strings.xml
+++ b/CommunityMarket/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <string name="app_name">Open Market</string>
+    <string name="app_name">Open Market beta</string>
     <string name="title_activity_accueil">Acceuil</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
