--- a/CommunityMarket/app/src/main/res/values-en/strings.xml
+++ b/CommunityMarket/app/src/main/res/values-en/strings.xml
@@ -137,6 +137,19 @@
     <string name="cuustum_text">edit your account data to post an article.</string>
     <string name="new_version_text">new version of open market available</string>
 
+    <string name="il_ya_ceci">currently there is this:</string>
+    <string name="fait_ton_choix">make your choice</string>
+    <string name="ici_on_vend_la_sap">here, we sell the sap.</string>
+    <string name="s_habiller_est_un_art_équilibre">to dress is an art ... balance.</string>
+    <string name="heureuxdetevoir">heureux de te voir</string>
+    <string name="commentaire"> you commented</string>
+    <string name="favories">you add to your favorites</string>
+    <string name="ma_publication"> my publication</string>
+    <string name="davantage"> can we talk about it more?</string>
+
+
+
+
 
 
 
