--- a/CommunityMarket/app/src/main/res/values-en/strings.xml
+++ b/CommunityMarket/app/src/main/res/values-en/strings.xml
@@ -146,7 +146,10 @@
     <string name="favories">you add to your favorites</string>
     <string name="ma_publication"> my publication</string>
     <string name="davantage"> can we talk about it more?</string>
-
+    <string name="clik_sur_profil">click on the profile picture to learn more about a seller if the product is not posted by you. "next" to continue</string>
+    <string name="laisser_commentaire">leave or see the comments. "next" to continue </string>
+    <string name="prix">ici apparait le prix." next " pour continuer</string>
+    <string name="supprimer">click here to delete one item from the sale. "next" to continue</string>
 
 
 
