--- a/CommunityMarket/app/src/main/res/values-en/strings.xml
+++ b/CommunityMarket/app/src/main/res/values-en/strings.xml
@@ -89,7 +89,7 @@
      <string name="soutenir">please click on the ad to support the app</string>
      <string name="soutiens_effectif">thank you for supporting the app</string>
      <string name="redirection">you will be redirected to the home in a few seconds</string>
-     <string name="decouvrir">Discover</string>
+     <string name="decouvrir">Fashion</string>
      <string name="T_shirts">t_shirts</string>
      <string name="Pulls">Pulls</string>
      <string name="jupes">skirts</string>
