--- a/CommunityMarket/app/src/main/res/values-fr/strings.xml
+++ b/CommunityMarket/app/src/main/res/values-fr/strings.xml
@@ -88,7 +88,7 @@
     <string name="soutiens_effectif">merci de soutemir l\'appli</string>
     <string name="redirection">vous serez rediriger a l\'acceuil dans quelques seconde</string>
 
-    <string name="decouvrir">Decouvrir</string>
+    <string name="decouvrir">Mode</string>
     <string name="T_shirts">T_shirts</string>
     <string name="Pulls">Pulls</string>
     <string name="jupes">jupes</string>
@@ -146,8 +146,8 @@
     <string name="ma_publication">ma publication</string>
     <string name="davantage"> pouvons nous en parler d\'avantage ?</string>
     <string name="clik_sur_profil">cliquez sur l\'image de profil pour en savoir plus sur un vendeurs si le produit n\'est pas poste par vous. " suivant " pour continuer</string>
-    <string name="laisser_commentaire">laisser ou voir les commentaires. " ok " pour continuer"</string>
-    <string name="prix">here appears the price. "next" to continue</string>
+    <string name="laisser_commentaire">laisser ou voir les commentaires. " suivant " pour continuer"</string>
+    <string name="prix">ici apparait le prix. "suivant" to continue</string>
     <string name="supprimer">cliquez ici pour supprimmer un votre article de la vente." suivant " pour continuer</string>
 
 </resources>
