--- a/CommunityMarket/app/src/main/res/values/strings.xml
+++ b/CommunityMarket/app/src/main/res/values/strings.xml
@@ -132,7 +132,7 @@
         <item>Maroua</item>
     </string-array>
     <string-array name="mode_list" id="@+id/mode_list">
-        <item> Categories ? </item>
+        <item> Dans quel categories ? </item>
         <item>vetements</item>
         <item>Chaussures</item>
         <item>Accessoires</item>
@@ -144,25 +144,25 @@
         <item>Sous_vetement</item>
     </string-array>
     <string-array name="phone_tablet" id="@+id/phone_tablet">
-        <item> Categories ? </item>
-        <item>Telephone</item>
+        <item>  Dans quel categories ? </item>
+        <item>Telephones</item>
         <item>Tablettes</item>
         <item>Accessoires</item>
     </string-array>
     <string-array name="electronique" id="@+id/electronique">
-        <item> Categories ? </item>
+        <item> Dans quel categories ?  </item>
         <item>Television</item>
-        <item>App.photo/camera</item>
+        <item>App.photo et camera</item>
         <item>Audio</item>
     </string-array>
     <string-array name="informatique" id="@+id/informatique">
-        <item> Categories ? </item>
+        <item> Dans quel categories ?</item>
         <item>Ordinateur</item>
         <item>Accessoires</item>
         <item>Stockage</item>
     </string-array>
     <string-array name="beaute" id="@+id/beaute">
-        <item> Categories ? </item>
+        <item> Dans quel categories ? </item>
         <item>Parfum</item>
         <item>Lait_De_Beautes</item>
         <item>Maquillages</item>
