--- a/CommunityMarket/app/src/main/res/values/strings.xml
+++ b/CommunityMarket/app/src/main/res/values/strings.xml
@@ -169,9 +169,10 @@
     </string-array>
 
     <string-array name="jeux" id="@+id/jeux">
-    <item> Dans quel categories ? </item>
-    <item>jeux</item>
-    <item>console</item>
+        <item> Dans quel categories ? </item>
+        <item>jeux</item>
+        <item>console</item>
+        <item>Accessoires</item>
     </string-array>
 
 
