--- a/CommunityMarket/app/src/main/res/values/strings.xml
+++ b/CommunityMarket/app/src/main/res/values/strings.xml
@@ -174,6 +174,10 @@
         <item>console</item>
         <item>Accessoires</item>
     </string-array>
+    <string-array name="recherche" id="@+id/jeux">
+        <item>articles</item>
+        <item>utilisateur</item>
+    </string-array>
 
 
     <string name="il_ya_ceci">actuellement il y\'a ceci :</string>
