--- a/CommunityMarket/app/src/main/res/values-en/strings.xml
+++ b/CommunityMarket/app/src/main/res/values-en/strings.xml
@@ -18,7 +18,7 @@
      <string name="string">Map</string>
      <string name="title_activity_scrolling_detail_one">ScrollingActivityDetailOne</string>
      <string name="description_titre_slider1">with Open Market, sell for free and easily your clothing everywhere in africa.</string>
-     <string name="titre_slider1">Sell ​​your clothes without stress.</string>
+     <string name="titre_slider1">Sell all you want without stress.</string>
      <string name="titre_slider2">Make your shop known.</string>
      <string name="slider_description_slider2">The application has target placement to allow you to highlight and make known your articles.</string>
      <string name="titre_slider3">contact, negotiate with others and make good business.</string>
