--- a/CommunityMarket/app/src/main/res/values/strings.xml
+++ b/CommunityMarket/app/src/main/res/values/strings.xml
@@ -17,7 +17,7 @@
     <string name="string">Map</string>
     <string name="title_activity_scrolling_detail_one">ScrollingActivityDetailOne</string>
     <string name="description_titre_slider1">Grace a Open Market , vendez gratuitement et facilement vos produits partout en afrique.</string>
-    <string name="titre_slider1">Vendez vos vetements sans stress .</string>
+    <string name="titre_slider1">Vendez vos produits sans stress .</string>
     <string name="titre_slider2">Faites connaitre votre boutique .</string>
     <string name="slider_description_slider2">L\'application dispose d\'enplacement cible pour vous pemettre de vous mettre en valeur et de faire connaitre vos articles.</string>
     <string name="titre_slider3">contacter,negocier avec d\'autres et faites de bonne affaire .</string>
