--- a/CommunityMarket/app/src/main/res/values-en/strings.xml
+++ b/CommunityMarket/app/src/main/res/values-en/strings.xml
@@ -134,7 +134,7 @@
     <string name="parametre_text">Setting</string>
     <string name="sell_empty_text">empty</string>
     <string name="user_general_voir_vente">see sales</string>
-    <string name="cuustum_text">edit your account data to post an article.</string>
+    <string name="cuustum_text">please edit your account data.</string>
     <string name="new_version_text">new version of open market available</string>
 
     <string name="il_ya_ceci">currently there is this:</string>
